# nvim-traveller-rs

./: .gitignore  Cargo.toml  README.md  Traveller  prepare.sh
lua/: nvim-traveller-rs.lua
src/: fuzzy_config.rs  lib.rs  lua_api.rs  lua_api_types.rs  lua_opts.rs  neo_api.rs  neo_api_types.rs  popup.rs  state.rs  theme.rs  utils.rs
