[package]
name = "nvim-traveller-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
lazy_static = "1.4.0"
mlua = { version = "0.9.7", features = ["luajit", "serialize"] }
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["macros", "rt", "rt-multi-thread", "sync"] }
