[package]
name = "nvim-traveller-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
#neo-api-rs = { git = "https://github.com/norlock/neo-api-rs", version = "0.1.0" }
neo-api-rs = { path = "../neo-api-rs", version = "0.1.0" }
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
once_cell = "1"
futures = "0.3"
